@startuml
skinparam classAttributeIconSize 0

class Coordinate <<datatype>> {
  +x: Int
  +y: Int
  +isValid(boardSize: Int): Boolean
  -distanceTo(other: Coordinate): Int
  +dotAdjacentTo(other: Coordinate): Boolean
}

class Player {
  +name: String
  +radarCharges = 2
  +bomberCharges = 1
  +myBoard: Board
  +enemyBoard: Board
  +addShip(coordinates: List<Coordinate>): Boolean
  +bomberAttack(coordinates: List<Coordinate>) : ShotResult
  +singleAttack(coordinate: Coordinate): ShotResult
  +scan(coordinates: List<Coordinate>) : Boolean
}

interface Board {
  +ownerName: String
  -openCells: FogOfWar
  -ships: List<Ship>
  -aliveShipCount: Int
  -isValidator: PlacementValidator
  +installationShip(Ship): Boolean
  +shoot(coordinates: List<Coordinate>): ShotResult
  // fun() + перечисление с сотояниями, выдающее состояние доски для GUI
}

interface Ship {
  +coordinates: List
  +processShot(shot: Coordinate): Boolean
  -hits = mutableListOf<Coordinate>
  +isAlive(): Boolean
}

class FogOfWar {
  -openCells: Set
  -inOpenCell(coordinate: Coordinate): Boolean
  +hits(coordinate: Coordinate): Boolean
  +grandHits(coordinates: List<Coordinate>): Boolean
}

class PlacementValidator{
    +isValidPlacement(newShip: Ship, existingShips: List<Ship>): Boolean {

}


' Связи графа
Player --> Board : uses
Board *-- FogOfWar : manages
Board o-- Ship : contains
Board *-- PlacementValidator: validates


@enduml